--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Set git config
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
